# wpa-cz-sk

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  dev-requirements.txt  docker-compose.yaml  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  rewuirements-dev.txt  tailwind.config.js
.github/workflows/: ci.yaml
articles/: README.md  admin.py  models.py  tests.py
articles/migrations/: 0001_initial.py  0002_alter_article_category_alter_article_contributors_and_more.py  0002_initial.py
breeding/: README.md  admin.py  apps.py  models.py  tests.py
common/: README.md  admin.py  models.py  tests.py
config/: settings.py  urls.py
core/: context_processors.py  forms.py  sitemaps.py  validators.py  views.py
dashboard/: views.py
events/: README.md  admin.py  models.py
members/: README.md  admin.py  forms.py  models.py  tests.py  views.py
profiles/: README.md  admin.py  forms.py  models.py  signals.py  views.py
projects/: README.md  admin.py  models.py
src/config/: settings.py  urls.py
static/: manifest.json  site.webmanifest
studbook/: README.md  admin.py  apps.py  models.py  tests.py
taxonomy/: README.md  admin.py  models.py  views.py
templates/: VETERINÁRNÍ PROBLEMATIKA _ WPA CZ – SK.htm  base.html  bazant-vietnamsky.html  bazant-zlaty.html  chovatelske_rady.html  contact.html  contact_email.html  contact_user_email.html  contact_user_email.txt  documents.html  gdpr.html  home.html  koroptve-polni.html  krmivo.html  liahnutie.html  members.html  membership_application.html  membership_email.html  membership_terms.html  membership_user_email.html  membership_user_email.txt  projects.html  robots.txt  statutes.html  support.html  velikosti-krouzku.html  veterina.html  voliery.html  wpa_world.html  zaciname.html
tests/: conftest.py  test_sample.py
users/: README.md  admin.py  forms.py  models.py  tests.py  views.py
(+74 files in other folders)
