[project]
name = "wpa-cz-sk"
version = "0.1.0"
description = "Wpa CZ-SK"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Matus Kocik", email = "matuskocik@gmail.com" }
]
license = "MIT"
dependencies = [
    "django>=5.2.4",
    "django-countries>=7.6.1",
    "django-ratelimit>=4.1.0",
    "dnspython>=2.7.0",
    "phonenumbers>=9.0.9",
    "psycopg-binary>=3.2.9",
    "python-decouple>=3.8",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "django-extensions>=4.1",
    "djlint>=1.36.4",
    "isort>=6.0.1",
    "pillow>=11.3.0",
    "requests>=2.32.4",
    "ruff>=0.12.3",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
exclude = ["migrations", "static", "media"]

[tool.ruff.lint]
select = ["E", "F", "I"]
fixable = ["I"]
ignore = ["D", "ANN", "E501"]
